--- a/partials/list.html
+++ b/partials/list.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<div ng-repeat="thingy in tasks | filter: false:isCompleted">
+<div ng-repeat="thingy in tasks | filter: searchText.search | filter: false:isCompleted">
     <div class="panel panel-default" ng-hide="thingy.isCompleted">
         <div class="panel-body">
             <div class="col-xs-1">
@@ -31,7 +31,7 @@
 
 
 <h3>Completed</h3>
-<div ng-repeat="thingy in tasks | filter: {isCompleted: true}">
+<div ng-repeat="thingy in tasks | filter: searchText.search | filter: {isCompleted: true}">
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="col-xs-1">
